# ChangeLog for x11-libs/fox
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.59 2006/10/29 13:18:15 mabi Exp $

  28 Oct 2006; Matti Bickel <mabi@gentoo.org> fox-1.2.18-r1.ebuild,
  fox-1.4.34-r1.ebuild:
  Stable on ppc (bug #145046)

*fox-1.6.16 (28 Oct 2006)

  28 Oct 2006; Matti Bickel <mabi@gentoo.org> +fox-1.6.16.ebuild:
  Version bump

  24 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; fox-1.0.53.ebuild,
  fox-1.2.6-r3.ebuild, fox-1.2.18.ebuild, fox-1.2.18-r1.ebuild,
  fox-1.4.34.ebuild, fox-1.4.34-r1.ebuild, fox-1.5.4.ebuild,
  fox-1.6.14.ebuild:
  Remove virtual/x11 option from modular X deps.

*fox-1.4.34-r1 (24 Sep 2006)
*fox-1.2.18-r1 (24 Sep 2006)

  24 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/1.2.18-gcc4-fix-includes.patch,
  +files/1.4.34-gcc4-fix-includes.patch, +fox-1.2.18-r1.ebuild,
  +fox-1.4.34-r1.ebuild:
  (#145800) Allow gcc4 to compile apps against fox. Patches from Debian,
  courtesy of Travis Tilley.

  05 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org> -fox-1.0.40.ebuild,
  -fox-1.0.43.ebuild, -fox-1.2.4.ebuild, -fox-1.2.15.ebuild,
  -fox-1.4.11.ebuild, -fox-1.4.12.ebuild:
  thin out unnecessary ebuilds

  23 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; fox-1.0.53.ebuild:
  Same gcc-4 fix as for 1.2

*fox-1.6.14 (23 Aug 2006)
*fox-1.4.34 (23 Aug 2006)
*fox-1.2.18 (23 Aug 2006)

  23 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; +fox-1.2.18.ebuild,
  +fox-1.4.34.ebuild, +fox-1.6.14.ebuild:
  (#128917) Bump to latest versions, so everything works with gcc-4. For 1.2
  series, the ebuild also needs -ffriend-injection (Martin von Gagern).

  19 Aug 2006; Thomas Cort <tcort@gentoo.org> fox-1.2.6-r3.ebuild:
  Stable on amd64 wrt Bug #138871.

  19 Aug 2006; Jason Wever <weeve@gentoo.org> fox-1.2.6-r3.ebuild:
  Stable on SPARC wrt bug #138871.

  18 Jul 2006; Michael Hanselmann <hansmi@gentoo.org> fox-1.2.6-r3.ebuild: