@@ -12,7 +12,7 @@ SHA256 93da83288b35ecbd7520edd6f556503a87e5af0751928dbf54a54bf7b6ccd0e4 files/1.
 DIST fox-1.0.49.tar.gz 2133091 RMD160 7bfc8777b5fa1e08a4f6afe38759ee06cd442f3b SHA256 81ec97089f7a8d5fececb89c94370e2d7665ec0679e797da568968cd26eeaf60
 DIST fox-1.0.53.tar.gz 2120403 RMD160 639c53b8d744cb1bd6674d022bd6a8fdf3cd593d SHA1 97129a7365fd997db6422da906407aed7e1749e0 SHA256 74fda862214869a20f0f3f83726c41d04e9159820a0a92042d9396425bb4ccd6
 DIST fox-1.2.18.tar.gz 3896090 RMD160 8c36939541e28f68bfd332fe1e12891faa15daca SHA1 3e17a6fd31c5e1bba5357c237fcb950834c28c38 SHA256 77509ed17fb736b83f3073fc04986eed79ce70338f6c12596c966551e0d56a1b
-DIST fox-1.2.6.tar.gz 3770911 RMD160 a9bc273f416937114fffcbfcbb7a534103bf1e60 SHA256 ac0753937bef12f5fa286f45a100ddcb2b6cc12b108ca133a80b50c8fe6825bb
+DIST fox-1.2.6.tar.gz 3770911 RMD160 a9bc273f416937114fffcbfcbb7a534103bf1e60 SHA1 d8d13814e8128f44e7ca82d99a464ddbe5881d09 SHA256 ac0753937bef12f5fa286f45a100ddcb2b6cc12b108ca133a80b50c8fe6825bb
 DIST fox-1.4.34.tar.gz 4028423 RMD160 35701bff6937f4753310b364dba1553109e661a4 SHA1 cd532233436082fda3bd077741236f118c71e1b8 SHA256 63acfd4815d3d71cdf2cbccf6e2fdf022192daec1674ab90cc294732948169ab
 DIST fox-1.5.4.tar.gz 4027866
 DIST fox-1.6.14.tar.gz 4331647 RMD160 fce9d3c19e7a91ba42302a9f1a3db7021573b9aa SHA1 c55b90dadfb01655ec63b33b08f748e1cfa8a615 SHA256 ce3185cef8d5a45a05b77854a80cc1e149c9971d1ca974372b52a3902ff87755
@@ -25,10 +25,10 @@ EBUILD fox-1.0.53.ebuild 1086 RMD160 cb2ae19c8a2e0de43c8cc6418418e3e39b3f322c SH
 MD5 5fe16a7107ca5f221ef018defaaeab0f fox-1.0.53.ebuild 1086
 RMD160 cb2ae19c8a2e0de43c8cc6418418e3e39b3f322c fox-1.0.53.ebuild 1086
 SHA256 cd8ed6b3320693af93e95cba162485d123e733d84a01f28ea37f640b76f64acf fox-1.0.53.ebuild 1086
-EBUILD fox-1.2.18-r1.ebuild 1267 RMD160 47d0efbeabf3c276b104894d27f282726aed4e9c SHA1 7a024628a7e8001b75979c4b89dfa9c8bc0359ab SHA256 06ba8a773d803528a9eba8ea8aad45625f588f66eb1fd40ac5d683b32b2f7c07
-MD5 175e6928c0743532712963bcfff82ee8 fox-1.2.18-r1.ebuild 1267
-RMD160 47d0efbeabf3c276b104894d27f282726aed4e9c fox-1.2.18-r1.ebuild 1267
-SHA256 06ba8a773d803528a9eba8ea8aad45625f588f66eb1fd40ac5d683b32b2f7c07 fox-1.2.18-r1.ebuild 1267
+EBUILD fox-1.2.18-r1.ebuild 1267 RMD160 d5d589190c3a718b9579ff33049eaedcfec89e61 SHA1 61366d19c42cb45d7168513bb40af76aa0d2cf7e SHA256 ca9e092e63bdbac003158da6f74644c80178f415aad73679b6c72c6f20a3012e
+MD5 0a6bafbf2591f8e862e3af91c65462a9 fox-1.2.18-r1.ebuild 1267
+RMD160 d5d589190c3a718b9579ff33049eaedcfec89e61 fox-1.2.18-r1.ebuild 1267
+SHA256 ca9e092e63bdbac003158da6f74644c80178f415aad73679b6c72c6f20a3012e fox-1.2.18-r1.ebuild 1267
 EBUILD fox-1.2.18.ebuild 1174 RMD160 c10db794aef0c8d3ef796dff1d843ce1e1af3d21 SHA1 5e0417d961d73d2141a5bc43be11e23b2ce5bc2b SHA256 8ef183453584bd4f6875cc2e17063ae723053890435fc5cb3c1ca29a5dd9c640
 MD5 969262980684586a00040957d3e0685d fox-1.2.18.ebuild 1174
 RMD160 c10db794aef0c8d3ef796dff1d843ce1e1af3d21 fox-1.2.18.ebuild 1174
@@ -41,10 +41,10 @@ EBUILD fox-1.2.6-r3.ebuild 1426 RMD160 f176e8f79e1476427de70a52aaa8fc80ad143600 
 MD5 4b89d078deec45e38620b81da36ecc85 fox-1.2.6-r3.ebuild 1426
 RMD160 f176e8f79e1476427de70a52aaa8fc80ad143600 fox-1.2.6-r3.ebuild 1426
 SHA256 9201642deebd9e42a1c2d5ecb04f0084c589d9e5bf41760e7a72db71afb0d0f3 fox-1.2.6-r3.ebuild 1426
-EBUILD fox-1.4.34-r1.ebuild 1118 RMD160 61debf9fc55f3dc7e5cf27fedbfe838268fff12e SHA1 56ab782dfecd67b3d7ba03f180b209410250f253 SHA256 0661023b4a6e260ba02ea6aa8c8195c6b5d5af61768c142462dc70dfc92bf0f3
-MD5 bd151f693386e652c686f428492dc0ec fox-1.4.34-r1.ebuild 1118
-RMD160 61debf9fc55f3dc7e5cf27fedbfe838268fff12e fox-1.4.34-r1.ebuild 1118
-SHA256 0661023b4a6e260ba02ea6aa8c8195c6b5d5af61768c142462dc70dfc92bf0f3 fox-1.4.34-r1.ebuild 1118
+EBUILD fox-1.4.34-r1.ebuild 1118 RMD160 afbfb60399bc549e23807cc15760e59ebdb87af7 SHA1 b2e96135b4dac3b7cc8388ba2d045747e7485b53 SHA256 e39b4344c49955206b49ac40301371af81794d4f84ce130275d48f1965f1156a
+MD5 bee72656c16b0af75d7bdebee826ef5d fox-1.4.34-r1.ebuild 1118
+RMD160 afbfb60399bc549e23807cc15760e59ebdb87af7 fox-1.4.34-r1.ebuild 1118
+SHA256 e39b4344c49955206b49ac40301371af81794d4f84ce130275d48f1965f1156a fox-1.4.34-r1.ebuild 1118
 EBUILD fox-1.4.34.ebuild 1028 RMD160 b26b416aff4f208be967722a557cd1b8c968dfb1 SHA1 ba90a2a7b9e925b9aab9cd6f1b16b41b7e35cc04 SHA256 e7e5d0e32c8297f83a66f8dedb93523b6d956f4ca03b2263c2bc3323f0d80569
 MD5 34421a5793c2da551ae7664bfc0b9f81 fox-1.4.34.ebuild 1028
 RMD160 b26b416aff4f208be967722a557cd1b8c968dfb1 fox-1.4.34.ebuild 1028
@@ -61,10 +61,10 @@ EBUILD fox-1.6.16.ebuild 1023 RMD160 70be0e8d762570fdcca9bf339efb38633a669125 SH
 MD5 a044c4a59731aeb7d3af6af5eeafbeb3 fox-1.6.16.ebuild 1023
 RMD160 70be0e8d762570fdcca9bf339efb38633a669125 fox-1.6.16.ebuild 1023
 SHA256 eb8352d0607dda9b1f7ba19773d517a5acfd6cfcf1ff6157b83d388260f048b8 fox-1.6.16.ebuild 1023
-MISC ChangeLog 7546 RMD160 4dd848ad2472373b96829127b9a5518ec4ba0c8b SHA1 f3134a6c5f962d77c8e2f66a46d262a04ecd8cb1 SHA256 b467bf5bacaef3f821884250060b52656a318d8c51a9fb0369a411bc416bb924
-MD5 592fe016aab51a65c1abf8e5c173e09e ChangeLog 7546
-RMD160 4dd848ad2472373b96829127b9a5518ec4ba0c8b ChangeLog 7546
-SHA256 b467bf5bacaef3f821884250060b52656a318d8c51a9fb0369a411bc416bb924 ChangeLog 7546
+MISC ChangeLog 7685 RMD160 1750b6e034f4f59823f5e43a1f5c4e7d92654379 SHA1 4847ccd8c2e26f416a03e1cf37103143376fbc2b SHA256 ee9f4af61cbe3d3a9bbd4a9efa3c48dc458b90409aed2f7236334e7c5b1163ac
+MD5 cf3724742ec7c4521cf6b71d222bab93 ChangeLog 7685
+RMD160 1750b6e034f4f59823f5e43a1f5c4e7d92654379 ChangeLog 7685
+SHA256 ee9f4af61cbe3d3a9bbd4a9efa3c48dc458b90409aed2f7236334e7c5b1163ac ChangeLog 7685
 MISC metadata.xml 246 RMD160 d8be15833db0ddabf74171f9e87a2a930ad6bcd2 SHA1 76fdc0af8e2d1dbb1214b95c49f8cd2da3d3832a SHA256 6a089a75a70b3b69d4cae78762fdc69afa25678c5b8692c61245f50bc49ab531
 MD5 ae5edc540c3c3ae7307d2ac4c0e16773 metadata.xml 246
 RMD160 d8be15833db0ddabf74171f9e87a2a930ad6bcd2 metadata.xml 246
@@ -105,7 +105,7 @@ SHA256 ef0d3e010f19c602f8f8f2dcbbcc932bb470db823698bd1b20f2825d85c91150 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFFRKoqfNMcoUhJ7GwRAlziAJ9ruo5KlwuSwtiAQeswX5QJsCVPqACgoPlJ
-QVKOHS2Xk6GaVR5MizW8ZNc=
-=x7gW
+iD8DBQFFRyJGNQqtfCuFneMRAmZ/AJ9bsXw81Ndv86DDkEfWN9GReBVSfQCeL9Tl
+AvYXWcuUsPTVb7EJ8jDHct4=
+=UgIJ
 -----END PGP SIGNATURE-----
