@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/fox
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.59 2006/10/29 13:18:15 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.60 2006/10/31 10:16:08 opfer Exp $
+
+  31 Oct 2006; Christian Faulhammer <opfer@gentoo.org> fox-1.2.18-r1.ebuild,
+  fox-1.4.34-r1.ebuild:
+  stabled on x86 due to bug #145046
 
   28 Oct 2006; Matti Bickel <mabi@gentoo.org> fox-1.2.18-r1.ebuild,
   fox-1.4.34-r1.ebuild:
